--- a/xbmc/DllPaths_generated.h.in
+++ b/xbmc/DllPaths_generated.h.in
@@ -2,6 +2,7 @@
 #define DLL_PATHS_GENERATED_H_
 
 /* libraries */
+#define DLL_PATH_CPLUFF        "special://xbmc/system/libcpluff-@ARCH@.so"
 #define DLL_PATH_IMAGELIB      "special://xbmc/system/ImageLib-@ARCH@.so"
 #define DLL_PATH_LIBEXIF       "special://xbmc/system/libexif-@ARCH@.so"
 #define DLL_PATH_LIBID3TAG     "special://xbmc/system/libid3tag-@ARCH@.so"
