--- a/addons/skin.pm3-hd/media/Makefile
+++ b/addons/skin.pm3-hd/media/Makefile
@@ -352,6 +352,6 @@ $(XBMCTEX): force
 	$(MAKE) -C ../../../tools/TexturePacker
 
 clean:
-	rm -f $(TARGET) gmon.out
+	rm -f $(TARGET)
 distclean: clean
 
