--- a/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcproj
+++ b/xbmc/lib/libPython/Python/PCbuild/pythoncore.vcproj
@@ -17,8 +17,8 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\."
-			IntermediateDirectory=".\x86-temp-release\pythoncore"
+			OutputDirectory="$(SolutionDir)libs\$(ProjectName)\$(ConfigurationName)\"
+			IntermediateDirectory="$(SolutionDir)objs\$(ProjectName)\$(ConfigurationName)\"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -56,10 +56,10 @@
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\x86-temp-release\pythoncore/pythoncore.pch"
-				AssemblerListingLocation=".\x86-temp-release\pythoncore/"
-				ObjectFile=".\x86-temp-release\pythoncore/"
-				ProgramDataBaseFileName=".\x86-temp-release\pythoncore/"
+				PrecompiledHeaderFile="$(IntDir)pythoncore.pch"
+				AssemblerListingLocation="$(IntDir)"
+				ObjectFile="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -85,12 +85,12 @@
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames="libc"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\./python24.pdb"
+				ProgramDatabaseFile="$(OutDir)python24.pdb"
 				SubSystem="2"
 				BaseAddress=""
 				RandomizedBaseAddress="2"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\./python24.lib"
+				ImportLibrary="$(OutDir)python24.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -117,8 +117,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\."
-			IntermediateDirectory=".\x86-temp-debug\pythoncore"
+			OutputDirectory="$(SolutionDir)libs\$(ProjectName)\$(ConfigurationName)\"
+			IntermediateDirectory="$(SolutionDir)objs\$(ProjectName)\$(ConfigurationName)\"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -153,10 +153,10 @@
 				PreprocessorDefinitions="_DEBUG;USE_DL_EXPORT;WIN32;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_USE_32BIT_TIME_T"
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\x86-temp-debug\pythoncore/pythoncore.pch"
-				AssemblerListingLocation=".\x86-temp-debug\pythoncore/"
-				ObjectFile=".\x86-temp-debug\pythoncore/"
-				ProgramDataBaseFileName=".\x86-temp-debug\pythoncore/"
+				PrecompiledHeaderFile="$(IntDir)pythoncore.pch"
+				AssemblerListingLocation="$(IntDir)"
+				ObjectFile="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="3"
@@ -182,12 +182,12 @@
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames="libc"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\./python24_d.pdb"
+				ProgramDatabaseFile="$(OutDir)python24.pdb"
 				SubSystem="2"
 				BaseAddress="0x1e000000"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\./python24_d.lib"
+				ImportLibrary="$(OutDir)python24_d.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -214,8 +214,8 @@
 		</Configuration>
 		<Configuration
 			Name="ReleaseItanium|Win32"
-			OutputDirectory="./."
-			IntermediateDirectory=".\ia64-temp-release\pythoncore"
+			OutputDirectory="$(SolutionDir)libs\$(ProjectName)\$(ConfigurationName)\"
+			IntermediateDirectory="$(SolutionDir)objs\$(ProjectName)\$(ConfigurationName)\"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
@@ -255,10 +255,10 @@
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
-				PrecompiledHeaderFile=".\ia64-temp-release\pythoncore/pythoncore.pch"
-				AssemblerListingLocation=".\ia64-temp-release\pythoncore/"
-				ObjectFile=".\ia64-temp-release\pythoncore/"
-				ProgramDataBaseFileName=".\ia64-temp-release\pythoncore/"
+				PrecompiledHeaderFile="$(IntDir)pythoncore.pch"
+				AssemblerListingLocation="$(IntDir)"
+				ObjectFile="$(IntDir)"
+				ProgramDataBaseFileName="$(IntDir)"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="true"
@@ -285,12 +285,12 @@
 				SuppressStartupBanner="false"
 				IgnoreDefaultLibraryNames="libc"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\./python24.pdb"
+				ProgramDatabaseFile="$(OutDir)python24.pdb"
 				SubSystem="2"
 				BaseAddress="0x1e000000"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\./python24.lib"
+				ImportLibrary="$(OutDir)python24.lib"
 				TargetMachine="0"
 			/>
 			<Tool
